# gic_calculator

./: .gitignore  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: interest_calculator.py
src/gic_calculator/: GIC_difference.py  __init__.py  gic_calculator.py  gic_difference.py  gic_plotting.py  gic_principle_interest.py  interest_calculator.py  total_gic.py
tests/: test_gic_calculator.py  test_gic_difference.py  test_gic_plotting.py  test_interest_calculator.py  test_total_gic.py
